--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -16,7 +16,7 @@
   <div class="row">
     <!-- displaying  Username-->
     <div class="col-md-4">
-      <h3>Author:  {{user.username| capitalize}} </h3>
+      <h3>{{user.username| capitalize}} </h3>
       <br>
       <hr>
       <a href="{{url_for('main.update_profile',uname=user.username)}}">Edit profile</a><br>
@@ -45,7 +45,7 @@
         {% endif %}
 
         {% if user == current_user %}
-        <form action="{{url_for('main.update_pic',uname=user.username)}}" method="post" enctype="multipart/form-data">
+        <form action="{{url_for('main.update_pic',username=user.username)}}" method="post" enctype="multipart/form-data">
           <br>
           <input type="file"  name="photo" class="form-control" required>
           <br>
