--- a/app/templates/new_review.html
+++ b/app/templates/new_review.html
@@ -7,11 +7,8 @@
 <div class="container">
 <br>
 <br>
-  {{ wtf.quick_form(comment_form) }}
-
+  {{ wtf.quick_form(review_form) }}
 
 </div>
-
-
 
 {% endblock %}
