--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,6 +16,51 @@
     
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="../static/photos/BIKE LOGO.jpg" alt="" width="55" height="45" class="d-inline-block align-text">
+              </a>
+              <div class="logo">BIKE-HIRE</div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </a>                
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="">About Us</a>
+                    </a>                
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="">Our Catalogue</a>
+                    </a>                
+                  </li>
+                    {% if current_user.is_authenticated %}                          
+                    <ul class="nav navbar-nav navbar-right">
+                        {% if current_user.is_authenticated %}
+                        <li class="nav-item">
+                          <a class="nav-link" href="{{url_for('main.profile',uname=current_user.author)}}">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="{{url_for('auth.logout')}}">Sign out</a>
+                        </li> <br> <br>
+                        {% else %}
+                        <li class="nav-item"> 
+                            <a class="nav-link" href="{{url_for('auth.register')}}">Sign up</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="{{url_for('auth.login')}}">Login</a>
+                          </li>
+                         <br> <br>
+                        {%endif%}
+                    </ul>
+              </div>
+            </div>
+          </nav>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>  
 </body>
