--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+<!-- <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <a class="navbar-brand" href="/" id="logo">BIKE HIRE</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -17,4 +17,4 @@
         </li> <br> <br>
         {%endif%}
       </ul>
-</nav>
+</nav> -->
