creating login and signup page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,3 @@
-{% extends 'base.html'%} {% block content%}
-<title>{{title}}</title>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut doloribus magni totam non! Saepe sapiente laudantium sunt ad eveniet porro dolorem, enim culpa nisi. Labore odio rerum suscipit quo natus?</p>
+{%extends "base.html"%} {% block title %}Home{% endblock %} {%block content%}
+<h1 class="text-white">Welcome to the Home Page.</h1>
 {% endblock %}
